add discord link

--- a/bp/bp-readme/index.html
+++ b/bp/bp-readme/index.html
@@ -10,7 +10,7 @@ code { color: #7b4; font-family: monospace, monospace; padding: 0 .2em; backgrou
 </style>
 
 </head><body><div>
-this document is regarding <a href="https://ocv.me/bp/101/">battleplan</a>
+this document is regarding <a href="https://ocv.me/bp/101/">battleplan</a> -- drop by the <a href="https://discord.gg/QhVWUs3">discord</a> if you've got feedback / questions
 
 <h1>current features:</h1><ul>
 
