--- a/bp/index.html
+++ b/bp/index.html
@@ -602,13 +602,14 @@ h3 {
 		5 金曜日 fri
 		6 土曜日 sat
 		7 日曜日 sun
+		[月火水木金土日]
 
 		https://www.comiket.co.jp/index_e.html
 		Dec 28,29,30,31 in 2019
 		sat sun mon tue 土 日 月 火
 	-->
-	<a href="#" id="bmenu_day1">金 / 1</a>
-	<a href="#" id="bmenu_day2">土 / 2</a>
+	<a href="#" id="bmenu_day1">土 / 1</a>
+	<a href="#" id="bmenu_day2">日 / 2</a>
 	<!--a href="#" id="bmenu_day3">月 / 3</a>
 	<a href="#" id="bmenu_day4">火 / 4</a-->
 	<a href="#" id="dbg">debug</a>
@@ -856,7 +857,7 @@ window.onerror = function(msg, url, lineNo, columnNo, error) {
 
 // だけど僕はそのままの
 
-var DAYS = ['金', '土'];  //, '月', '火'];
+var DAYS = ['土', '日'];  //, '月', '火'];
 var HALLS = ['e1','e2','e3','e4','e5','e6','w1a','w1b','w2a','w2b'];
 var ROWS = [  // wall first, then right-to-left
 	"ABCDEFGHIJKLM",  //e1
