--- a/bp/index.html
+++ b/bp/index.html
@@ -259,7 +259,8 @@ tr.hil td {
 #ladd_kan, #ldel_kan {
 	display: block;
 	font-size: 1.5em;
-	padding: .5em .2em;
+	padding: .5em .2em 0 .2em;
+	min-height: 1.4em;
 }
 #ladd_rom, #ldel_rom {
 	background: #111;
