add missing rows ワヲ

--- a/bp/index.html
+++ b/bp/index.html
@@ -865,11 +865,11 @@ var DAYS = ['土', '日'];  //, '月', '火'];
 var HALLS = ['e1','e2','e3','e4','e5','e6','w1a','w1b','w2a','w2b'];
 var ROWS = [  // wall first, then right-to-left
 	"ABCDEFGHIJKLM",  //e1
-	"NOPQRSTUVWXY",  //e2
-	"Zアイウエオカキクケコサ",  //e3
-	"シスセソタチツテトナニヌネ",  //e6
-	"ノハパヒピフプヘペホポマ",  //e5
-	"ミムメモヤユヨラリルレロ",  //e4
+	"NOPQRSTUVWXYZ",  //e2
+	"アイウエオカキクケコサシ",  //e3
+	"スセソタチツテトナニヌネノ",  //e6
+	"ハパヒピフプヘペホポマミム",  //e5
+	"メモヤユヨラリルレロワヲ",  //e4
 	"あきくけこさしすせそたち",  //w2t
 	"いうえおか",  //w2b
 	"めつてとなにぬねのはひふ",  //w1t
