add grid view + unscore by reselecting same rating

--- a/bp/bp-readme/index.html
+++ b/bp/bp-readme/index.html
@@ -14,9 +14,9 @@ this document is regarding <a href="https://ocv.me/bp/103/">battleplan</a> -- dr
 
 <h1>current features:</h1><ul>
 
-<li>browse booths at comiket</li>
+<li>browse booths at comiket (either as a list, or as a grid of pictures)</li>
 
-<li>search for circles</li>
+<li>search for circles (name, romaji, twitter, booth#, ...)</li>
 
 <li>add booths to your shopping list by rating them from 1-9</li>
 
@@ -72,6 +72,7 @@ this document is regarding <a href="https://ocv.me/bp/103/">battleplan</a> -- dr
 <li>⭕ shows the complete list of circles</li>
 <li>📂 to restore shopping list from a backup</li>
 <li>💾 to create a backup of your shopping list</li>
+<li>⚙️ for settings (table/grid-view, ...)</li>
 <li>📆 to select which day to work on</li>
 <li>📲 to download database for the current day</li>
 </ul>
@@ -81,6 +82,7 @@ this document is regarding <a href="https://ocv.me/bp/103/">battleplan</a> -- dr
 <p>The comiket organizers may release updates to the database over time, so redownload each day occasionally to stay up to date.</p>
 <h1 id="🔍-01-yonder-voice--seekingflac"><a href="#🔍-01-yonder-voice--seekingflac" ctr="3">🔍 <code>01. Yonder Voice — SEEKING.flac</code></a></h1>
 <p>If you want to add a particular circle to your shopping list, you can use the 🔍search view. The default search term will be "stroemer", replace this with a circle name. Search results will be immediately displayed below.</p>
+<p>By default, this is displayed as a plaintext list, but you can enable pictures (or change to grid-view) in "settings" 🠞 "configure list view".</p>
 <p>Click a search result to modify its shopping list entry (described two sections further down).</p>
 <p>By default, the search will scan through circle names in kanji, katakana and romaji. Change this by clicking <code>(settings)</code> under the search field. Twitter and pixiv is only searchable for the circles who remembered to mention their account names to the comiket organizers.</p>
 <p>If you enable <code>regex query</code>, you have to write your searches according to <a href="https://www.regular-expressions.info/quickstart.html">https://www.regular-expressions.info/quickstart.html</a></p>
